<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".AddContact">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/enter_full_name" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/my_edit_text"
        android:hint="@string/full_name"
        android:inputType="text"
        android:minHeight="50dp"
        android:paddingHorizontal="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/enter_phone" />

    <EditText
        android:id="@+id/etPhone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/my_edit_text"
        android:hint="@string/mobile_example"
        android:inputType="phone"
        android:minHeight="50dp"
        android:paddingHorizontal="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/enter_address" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/my_edit_text"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="50dp"
        android:paddingHorizontal="10dp" />


    <Button
        android:id="@+id/btn_save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/save" />
</LinearLayout>