<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".ContactDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contact_id" />

        <EditText
            android:id="@+id/ed_cd_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/contact_id"
            android:background="@drawable/my_edit_text"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/ed_cd_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/my_edit_text"
            android:inputType="none"
            android:hint="@string/full_name"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/phone_no" />

        <EditText
            android:id="@+id/ed_cd_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/phone_no"
            android:importantForAutofill="no"
            android:inputType="phone"

            android:background="@drawable/my_edit_text"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/address" />

        <EditText
            android:id="@+id/ed_cd_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/address"
            android:background="@drawable/my_edit_text"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/total_listed" />

        <EditText
            android:id="@+id/ed_cd_total_listed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/total_listed"
            android:background="@drawable/my_edit_text"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/contact_total_payment" />

        <EditText
            android:id="@+id/ed_cd_payments"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/contact_total_payment"
            android:background="@drawable/my_edit_text"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/total_reminder" />

        <EditText
            android:id="@+id/ed_cd_reminder"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/total_reminder"
            android:background="@drawable/my_edit_text"
            android:paddingHorizontal="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:weightSum="6"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cd_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_weight="1.8"/>

            <Button
                android:id="@+id/btn_cd_lists"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/list_detail"
                android:layout_weight="2"/>

            <Button
                android:id="@+id/btn_cd_payments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/payments"
                android:layout_weight="2.2"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
