<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPayment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/select_contact" />

            <Spinner
                android:id="@+id/sp_p_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/my_edit_text"
                android:minHeight="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/amount" />

            <EditText
                android:id="@+id/et_p_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:inputType="number"
                android:hint="@string/enter_amount"
                android:background="@drawable/my_edit_text"
                android:minHeight="50dp"
                android:importantForAutofill="no" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/note" />

            <EditText
                android:id="@+id/et_p_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/my_edit_text"
                android:minHeight="50dp"
                android:hint="@string/note"
                android:paddingHorizontal="10dp"
                android:minLines="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/date" />

            <EditText
                android:id="@+id/et_p_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:hint="@string/enter_date"
                android:background="@drawable/my_edit_text"
                android:minHeight="50dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_p_save"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text= "@string/save" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>