<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ListsDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/full_name" />

        <EditText
            android:id="@+id/et_ld_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/my_edit_text"
            android:minHeight="50dp"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/list_id" />

        <EditText
            android:id="@+id/et_ld_l_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/my_edit_text"
            android:minHeight="50dp"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/et_ld_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/my_edit_text"
            android:inputType="number"
            android:minHeight="50dp"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/list_title" />

        <EditText
            android:id="@+id/et_ld_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/my_edit_text"
            android:minHeight="50dp"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/note" />

        <EditText
            android:id="@+id/et_ld_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/my_edit_text"
            android:minHeight="50dp"
            android:minLines="5"
            android:paddingHorizontal="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/date" />

        <EditText
            android:id="@+id/et_ld_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/my_edit_text"
            android:minHeight="50dp"
            android:paddingHorizontal="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ld_delete"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <Button
                android:id="@+id/btn_ld_update"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/save_changes" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
