<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".LoginPage">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/icmf2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/et_lp_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/my_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="10"
        android:minHeight="50dp"
        android:paddingHorizontal="10dp" />

    <TextView
        android:id="@+id/tv_lp_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/password_hint"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_lp_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login" />
</LinearLayout>

