<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icmf2_foreground"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/tv_a_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingHorizontal="10dp"
                android:text="@string/app_name"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/tv_a_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="10dp"
                android:text="@string/app_version"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="10dp"
                android:text="@string/organization"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_a_organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingHorizontal="10dp"
                android:text="@string/organization"
                android:inputType="none"
                android:textSize="20sp"
                android:hint="@string/organization"
                tools:ignore="LabelFor"
                android:importantForAutofill="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="10dp"
                android:text="@string/app_developer"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_a_app_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingHorizontal="10dp"
                android:hint="@string/app_developer"
                android:text="@string/app_developer"
                android:textSize="20sp"
                android:importantForAutofill="no"
                android:inputType="text" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="10dp"
                android:text="@string/email"
                android:hint="@string/developer_email"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_a_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingHorizontal="10dp"
                android:text="@string/email"
                android:hint="@string/email"
                android:textSize="20sp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="10dp"
                android:text="@string/phone_no"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_a_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:linksClickable="true"
                android:paddingHorizontal="10dp"
                android:text="@string/phone_no"
                android:hint="@string/developer_phone"
                android:textSize="20sp"
                android:inputType="phone"
                android:importantForAutofill="no" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>